# LockPin

./: .eslintrc.json  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
apps/desktop/: FolderPane.tsx  VaultItemDialog.tsx  login.tsx  vault.tsx
apps/desktop/hooks/: useAutoLock.ts
core/audit/: logger.ts
core/crypto/: encryption.ts
core/sharing/: service.ts
core/vault/: health.ts  import.ts  storage.ts  totp.ts  types.ts
shared/constants/: index.ts
shared/types/: index.ts
shared/utils/: index.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/components/atoms/: Badge.tsx  Button.tsx
ui/components/molecules/: PasswordGenerator.tsx  PasswordStrengthMeter.tsx  index.ts
ui/components/organisms/: Modal.tsx  Toast.tsx  index.ts
ui/contexts/: ThemeContext.tsx  useDebounce.ts  useKeyboard.ts
ui/design-system/: tokens.ts
