[package]
name = "lockpin"
version = "3.0.0"
edition = "2021"

[lib]
name = "lockpin_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
argon2 = "0.5"
rand = "0.9"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
  "Foundation",
  "Security_Credentials_UI",
  "Win32_Foundation",
  "Win32_Security_Credentials",
  "Win32_Security_Cryptography",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_System_WinRT",
  "Win32_UI_Shell",
] 
